--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,14 @@
 
   <title>wheel</title>
   <link rel="manifest" href="manifest.json">
+  <style>
+    html, body {
+      overscroll-behavior: none;
+      overflow: hidden;
+      -webkit-overflow-scrolling: none;
+      touch-action: none;
+    }
+  </style>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
